no longer need justify or align on grid

--- a/src/components/nav/_nav.scss
+++ b/src/components/nav/_nav.scss
@@ -7,8 +7,6 @@ nav {
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    justify-content: space-evenly;
-    align-items: center;
     padding: 1rem 0;
   }
 }
